style(validation): apply -Ppre-commit auto-fixes to DocumentedPackagePatternTest
The quality gate's rewrite rules collapsed the static Assertions imports,
replaced Paths.get with Path.of, and widened the sweep test's throws clause.
No behavioural change; the gate is green with these applied.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Hg2nooqHwbtJFtfWqVJAmP